--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 .letter-pink {
    color:  #FF4081
 }
-.backgroud-gray {
+.background-gray {
    background-color:  #E5E5E5;
 }
 
@@ -70,3 +70,108 @@ font-size: 20px;
 #banner1 p {
 font-size: 25px;
 }
+
+#cursos {
+    padding: 60px;
+}
+
+#cursos article {
+    width: 400px;
+    margin: 40px;
+    text-align: center;
+}
+
+#cursos img {
+    width: 400px;
+    height: 400px;
+}
+
+#cursos p {
+margin-bottom: 30px;
+}
+
+#cursos a {
+    text-decoration: none;
+    background-color: #FF4081;
+    color: white;
+    padding: 3px 30px;
+    border: #FF4081 10px solid;
+    border-radius: 40px;
+}
+
+h2 {
+    margin: 50px;
+}
+
+#sobre-nos {
+    flex-wrap: wrap;
+}
+
+#sobre-nos article {
+    width: 600px;
+    margin: 30px 0px;
+}
+
+#sobre-nos p{
+    width: 450px;
+}
+
+.retangulo {
+   width: 300px;
+   height: 190px;
+   background-color: #af9e9e;
+}
+
+#ultimasessao a {
+    text-decoration: none;
+    background-color: #E5E5E5;
+    color: #FF4081;
+    border: #FF4081 2px solid;
+    border-radius: 40px;
+    padding: 8px 30px;
+    font-size: 20px;  
+}
+
+#ultimasessao {
+    background-color: #E5E5E5;
+    padding: 60px;
+}
+
+#ultimasessao article {
+    width: 300px;
+}
+
+#ultimasessao nav {
+    text-align: center;
+    margin: 60px 0px;
+}
+
+footer {
+    padding: 30px;
+}
+
+footer a {
+    margin: 10px;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+}
+
+footer nav {
+    flex-direction: column;
+}
+
+#button {
+    flex-direction: column;
+}
+
+#button a {
+    border: solid white 1px;
+    border-radius: 60px;
+    padding: 10px 40px;
+}
+
+
+
+
+
