--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     display: flex;
 }
 
+.wrap {
+    flex-wrap: wrap;
+}
+
 .align {
     align-items: center;
 }
@@ -108,12 +112,13 @@ h2 {
 }
 
 #sobre-nos article {
-    width: 600px;
+    width: 800px;
     margin: 30px 0px;
 }
 
 #sobre-nos p{
-    width: 450px;
+    width: 550px;
+    margin-left: 20px;
 }
 
 .retangulo {
