--- a/media.css
+++ b/media.css
@@ -76,3 +76,26 @@
         padding: 10px 0px;
     }
 }
+/*Media contato*/
+@media only screen and (max-width: 1190px) {
+    #formulario {
+        justify-content: space-between;
+        padding: 30px 20px;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    #formulario {
+        flex-direction: column;
+        text-align: center;
+    }
+}
+@media only screen and (max-width: 500px){
+    #formulario {
+        width: 200px;
+        justify-content: center;
+        padding: 30px 0px;
+    }
+}
+/*verificar media do formulario*/
+
