--- a/media.css
+++ b/media.css
@@ -3,12 +3,15 @@
         width: 600px;
         margin: 20px 0px;    
     }
+    }
+
+    @media only screen and (max-width: 1160px){
     #cursos {
         flex-direction: column;
         align-items: center;
     }
 }
-@media only screen and (max-width: 1155) {
+@media only screen and (max-width: 1155px) {
     #banner1{
         text-align: center;
         flex-direction: column;
