--- a/style.css
+++ b/style.css
@@ -80,14 +80,15 @@ font-size: 25px;
 }
 
 #cursos article {
-    width: 400px;
-    margin: 40px;
+    width: 300px;
+    margin: 40px 0px;
     text-align: center;
+    align-items: center;
 }
 
 #cursos img {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
 }
 
 #cursos p {
